Crash on instance to scene of a collection of a linked scene #81282

Closed
opened 2020-09-29 08:26:56 +02:00 by Zsolt Stefan · 8 comments

Blender_Instance_to_Scene_Bug.zip
System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-20 18:23, hash: e14894aad2
Worked: -

Short description of error
Right clicking on a collection of a linked scene (from another blend file) and selecting instance to scene instantly crashes Blender.
On a related not,

Exact steps for others to reproduce the error
I've made a very basic example, with two blend files, one linked into the other.

  • Open Blend file "...Base.blend"
  • In the scene selection dropdown at the top, select "Linked Scene"
  • Right click on the one Collection in the outliner and select Instance to Scene
  • --> Crash.

On a related note, how do I select which scene I want to instance my collection in? The instance to scene command doesn't give me a way to select any other scene in the blend file. ? For sharing assets between scenes.

[Blender_Instance_to_Scene_Bug.zip](https://archive.blender.org/developer/F8935732/Blender_Instance_to_Scene_Bug.zip) **System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.48 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-20 18:23, hash: `e14894aad2` Worked: - **Short description of error** Right clicking on a collection of a linked scene (from another blend file) and selecting **instance to scene** instantly crashes Blender. On a related not, **Exact steps for others to reproduce the error** I've made a very basic example, with two blend files, one linked into the other. - Open Blend file "...Base.blend" - In the scene selection dropdown at the top, select "Linked Scene" - Right click on the one Collection in the outliner and select Instance to Scene - --> **Crash**. On a related note, how do I select which scene I want to instance my collection in? The instance to scene command doesn't give me a way to select any other scene in the blend file. ? For sharing assets between scenes.
Author

Added subscriber: @ZsoltStefan

Added subscriber: @ZsoltStefan
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Thanks for the report! I can confirm this, and it also leads to a failed assert in a debug build:

  /* Only case where this pointer can be NULL is when scene itself is linked, this case should
   * never be reached. */

Another piece of information: I tried this in 2.83.5 and it worked, although it crashed when I used undo right after that.

Thanks for the report! I can confirm this, and it also leads to a failed assert in a debug build: ``` /* Only case where this pointer can be NULL is when scene itself is linked, this case should * never be reached. */ ``` Another piece of information: I tried this in 2.83.5 and it worked, although it crashed when I used undo right after that.

Added subscriber: @mont29

Added subscriber: @mont29

This option should not be enabled when a linked scene is active…

This option should not be enabled when a linked scene is active…

This issue was referenced by fd698782b9

This issue was referenced by fd698782b9766485560f118b0860520d46194527

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-10-01 14:12:18 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81282
No description provided.